--- a/src/styles.css
+++ b/src/styles.css
@@ -7,15 +7,25 @@
   font-size: 2em;
 }
 
-.btn {
-  height: 20px;
-  width: 50px;
-  font-size: 12px;
-  box-shadow: 1px 1px;
-  border-radius: 4px;
-}
+.btn {}
 
 .btn-primary {
-  color: #000;
-  background-color: yellow
+  color: #fff !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #ed3330;
+  padding: 20px;
+  border-radius: 5px;
+  display: inline-block;
+  border: none;
+  transition: all 0.4s ease 0s;
+}
+
+.btn-primary:hover {
+  background: #434343;
+  letter-spacing: 1px;
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
